# dafny

./: shell.nix
Source/DafnyCore/: DafnyGeneratedFromDafny.sh
Source/DafnyCore/Backends/Rust/: Dafny-compiler-rust.dfy
Source/DafnyCore/GeneratedFromDafny/: DCOMP.cs  RAST.cs
Source/DafnyRuntime/DafnyRuntimeRust/: Cargo.toml
Source/DafnyRuntime/DafnyRuntimeRust/src/: lib.rs
