[package]
name = "dafny_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { version = "1.18.0", default-features = false }
paste = "1.0"
num = { version = "0.4", default-features = false, features = ["alloc"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
as-any = "0.3.1"
hashbrown = "0.14.5"
